# SW-puppeteer

./: .gitignore  Initialize.sh  LICENSE.md  README.md  ServiceWorkers.cvs  ServiceWorkers.txt  captureNoSeviceWorker  captureSeviceWorker  createOverAll.sh  killCrawlers.sh  makeScriptsRunnable.sh  package-lock.json  package.json  randomSites.txt  results.txt  runCrawlers.sh  runCrawlersHeadlessMode.sh  runParts.sh  runPartsHeadlessMode.sh  runServiceWorkerBrowser.sh  sitesWithSWin150KFirstSites.csv  updatePackageJson.py
Datasets/: falseNegativeSites.csv  serviceWorkersSite.csv  serviceWorkersSite2.csv  split-data.sh  test.csv  top-10.csv  top-1000.csv  usingCdn.contentsitesrv.comList.csv
Figures/: Makefile
Figures/Top_content_ads/: Makefile  adcontent.eps  data.tsv  plot.gn
Lambdas/: Makefile  index.js  package.json  profilerInvokator.py  scraper.py  sitesWithSWFirst100K.txt
Lists/: adserversBlacklist.txt  disconnect_list.json  hosts.txt
Measurements/: Makefile
SW_info/: ThreeHoursLeave-www.kreiszeitung.de.txt
ServiceWorkers/: _ReadMe.txt  as.com-SW0.js  assets.alicdn.com-SW.js  cdn.izooto.com()scripts-1.js  coinmarketcap.com-SW0.js  ecdn.firstimpression.io-SW0.js  firebase.google.com-SW0.js  lenta.ru-SW0.js  metro.co.uk-SW0.js  nypost.com-SW0.js  ok.ru-SW0.js  padlet.com-SW0.js  player.simplecast.com-SW0.js  ria.ru-SW0.js  s.pinimg.com-SW.js  sputniknews.com-SW0.js  twitter.com-SW.js  twitter.com-SW0.js  unsplash.com-SW0.js  vk.com-SW0.js  vnexpress.net-SW0.js  weather.com-SW0.js  www.airbnb.com-SW0.js  www.aliexpress.com-SW0.js  www.att.com-SW0.js  www.bloomberg.com-SW0.js  (+64 more)
(+2163 files in other folders)
